--- a/source/Makefile
+++ b/source/Makefile
@@ -1,5 +1,5 @@
 elzede-cli:
-	gcc i2c_device.cpp el_zede.cpp cli.cpp -o elzede-cli
+	gcc i2c_device.cpp el_zede.cpp cli.cpp -o elzede-cli -lm
 
 clean:
 	rm -f elzede-cli
