Fixed SIGSEGV, added install to Makefile

--- a/source/Makefile
+++ b/source/Makefile
@@ -1,6 +1,13 @@
 elzede-cli:
-	gcc i2c_device.cpp el_zede.cpp cli.cpp -o elzede-cli -lm
+	gcc i2c_device.cpp el_zede.cpp cli.cpp -o elzede-cli -lm -lstdc++
+
+/usr/local/bin/elzede-cli: elzede-cli
+	cp -f elzede-cli /usr/local/bin/elzede-cli
+
+install: /usr/local/bin/elzede-cli
 
 clean:
-	rm -f elzede-cli
+	rm -f elzede-cli >/dev/null 2>&1
 
+all: elzede-cli install
+	
