LCD driver changed

--- a/source/Makefile
+++ b/source/Makefile
@@ -1,5 +1,5 @@
 elzede-cli:
-	gcc i2c_device.cpp el_zede.cpp cli.cpp -o elzede-cli -lm -lstdc++
+	gcc i2c_device.cpp LiquidCrystal.cpp cli.cpp -o elzede-cli -lm -lstdc++
 
 /usr/local/bin/elzede-cli: elzede-cli
 	cp -f elzede-cli /usr/local/bin/elzede-cli
